# C_Basic

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml
chapters/00_practice/: CMakeLists.txt  main.c
chapters/00_practice/include/: practice_examples.h  utils.h
chapters/00_practice/src/: main.c  practice_examples.c
chapters/01_basics/: CMakeLists.txt  main.c
chapters/01_basics/include/: arrays.h  functions.h  operators.h  pointers_memory.h  strings.h  structs_enums.h  variables.h
chapters/01_basics/src/: arrays.c  functions.c  operators.c  pointers_memory.c  strings.c  structs_enums.c  variables.c
chapters/02_system/: CMakeLists.txt  main.c
chapters/02_system/include/: bitops.h  build_link.h  memory_model.h  pointers.h
chapters/02_system/src/: bitops.c  build_link.c  memory_model.c  pointers.c
chapters/03_optimization/: main.c
chapters/03_optimization/include/: compiler_flags.h  loops.h  mem_patterns.h  profiling.h
chapters/03_optimization/src/: compiler_flags.c  loops.c  mem_patterns.c  profiling.c
chapters/04_parallel/include/: cuda_intro.h  openmp_demo.h  process_ipc.h  pthreads_demo.h
chapters/04_parallel/src/: cuda_intro.c  main.c  openmp_demo.c  process_ipc.c  pthreads_demo.c
